--- a/11.6/自我介绍.md
+++ b/11.6/自我介绍.md
@@ -1,6 +1,12 @@
 #自我介绍
 - 朱敏志
 - 93年出生，男
+
+##掌握技能
+1. html&css
+2. javaScript
+3. vue,jquery
+
 -----------------------------------------------------------------------
 1. 大学学的专业是工程造价，毕业后参加培训机构才进入的前端开发这个行业，正式工作经验有一年了。之所以参加这个全栈培训是因为自己不满足现状，想更多的学习一些新东西。
 2. 就目前两节课来看涉及前端知识性的问题都可以，但是涉及一些服务器，翻墙什么的我就很急躁，一方面觉得自己很蠢，一方面又会想是不是报这个课程有点过于着急，好像很不在状态，不知道如何去调整。
